--- a/assignment1/Solucion.Rmd
+++ b/assignment1/Solucion.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r}
 require(tseries)
 require(DAAG)
+require(knitr)
 ```
 
 ## Carga de los datos y preprocesamiento
@@ -124,6 +125,7 @@ trend.check.hypothesis <- function(
 }
 ```
 
+#### Hipótesis 1
 
 ```{r}
 # MA-3 manteniendo valores próximos
@@ -163,6 +165,8 @@ serie.ts.train.without.trend.h1 <- serie.ts.train - trend.estimated.train.h1
 serie.ts.test.without.trend.h1 <- serie.ts.test - trend.estimated.test.h1
 ```
 
+#### Hipótesis 2
+
 ```{r}
 # MA-5 manteniendo valores próximos
 k.h2 <- 2
@@ -200,6 +204,8 @@ trend.check.hypothesis(
 serie.ts.train.without.trend.h2 <- serie.ts.train - trend.estimated.train.h2
 serie.ts.test.without.trend.h2 <- serie.ts.test - trend.estimated.test.h2
 ```
+
+#### Hipótesis 3
 
 ```{r}
 # MA-3 regresión lineal para los k valores del principio y del final
@@ -245,6 +251,8 @@ trend.check.hypothesis(
 serie.ts.train.without.trend.h3 <- serie.ts.train - trend.estimated.train.h3
 serie.ts.test.without.trend.h3 <- serie.ts.test - trend.estimated.test.h3
 ```
+
+#### Hipótesis 4
 
 ```{r}
 # MA-5 regresión lineal para los k valores del principio y del final
@@ -293,6 +301,8 @@ serie.ts.train.without.trend.h4 <- serie.ts.train - trend.estimated.train.h4
 serie.ts.test.without.trend.h4 <- serie.ts.test - trend.estimated.test.h4
 ```
 
+#### Hipótesis 5
+
 ```{r}
 # MA-3 regresión lineal para los k valores del final. Mantener valores en el principio
 k.h5 <- 1
@@ -331,6 +341,8 @@ trend.check.hypothesis(
 serie.ts.train.without.trend.h5 <- serie.ts.train - trend.estimated.train.h5
 serie.ts.test.without.trend.h5 <- serie.ts.test - trend.estimated.test.h5
 ```
+
+#### Hipótesis 6
 
 ```{r}
 # MA-5 regresión lineal para los k valores del final. Mantener valores en el principio
@@ -388,7 +400,7 @@ acf(serie.ts.train.without.trend.h6)
 Visualmente se puede observar que se ha eliminado ese escalonado que existía anteriormente a borrar la tendencia de la serie original. Por lo tanto, por el momento se pueden dar por válidas todas las hipótesis.
 
 
-## Estacionalidad
+### Estacionalidad
 
 Revisando todos los ACF anteriores donde se ha eliminado la tendencia no se observa en ningún momento ningún patrón que
 se repita cada x tiempo, por lo tanto no se va a modelar la estacionalidad.
@@ -418,113 +430,363 @@ adf.test(serie.ts.train.without.trend.h6)
 
 En este caso, todas las series temporales generadas por cada hipótesis son estacionarias, por lo que la hipótesis de que no había estacionalidad era real. Una vez que se sabe que son estacionarias, se procede a entrenar los modelos arima.
 
-# Modelo ARIMA
+## Modelos ARIMA
 
-p -> 6
-d-> 0
-q -> 3
+A continuación se va a entrenar un modelo con cada serie temporal que ha generado cada hipótesis. Para cada modelo ARIMA hay que establecer el orden del modelo autorregresivo, el grado de diferenciación y el orden del modelo de medias móviles. De antemano, para todos los modelos que se van a entrenar el grado de diferenciación va a ser 0 ya que no ha hecho falta diferenciar la serie para que fuera estacionaria.
+
+Por norma general, el orden de p es el número de valores en el PACF que no están en el rango:
+$$[-\frac{2}{\sqrt{N}}, \frac{2}{\sqrt{N}}]$$
+donde N es la longitud de la serie.
+
+Es muy similar para obtener el orden de q, que es el número de valores en el ACF que no están en el rango:
+$$[-\frac{2}{\sqrt{N}}, \frac{2}{\sqrt{N}}]$$
+donde N es la longitud de la serie.
+
+Estos rangos se representan en los gráficos ACF y PACF como una línea discontinua azul.
+
+### Modelo con la serie temporal generada por la hipótesis 1
+
+Como se puede ver en el gráfico PACF, hay 6 valores que están fuera del rango, por que el orden de p es 6. Respecto al orden de q, solo hay dos valores que sobrepasan ese rango, por lo que será 2.
 
 ```{r}
-acf(serie.ts.train.without.trend)
-pacf(serie.ts.train.without.trend)
+acf(serie.ts.train.without.trend.h1)
+pacf(serie.ts.train.without.trend.h1)
 ```
 
 ```{r}
-arima.model <- arima(
-    serie.ts.train.without.trend,
+arima.model.h1 <- arima(
+    serie.ts.train.without.trend.h1,
+    order = c(6, 0, 2)
+)
+
+valoresAjustados.h1 <- serie.ts.train.without.trend.h1 + arima.model.h1$residuals + trend.estimated.train.h1
+predictions.h1 <- predict(arima.model.h1, n.ahead = 2)$pred + trend.estimated.test.h1
+
+# Representación de los valores ajustados y la predicción
+plot.ts(
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
+)
+lines(valoresAjustados.h1, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h1, col="blue")
+```
+
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
+
+```{r}
+Box.test(arima.model.h1$residuals)
+jarque.bera.test(arima.model.h1$residuals)
+shapiro.test(arima.model.h1$residuals)
+hist(arima.model.h1$residuals, col="blue", prob=T)
+lines(density(arima.model.h1$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h1 <- sqrt(mean((valoresAjustados.h1 - serie.ts.train)^2))
+errorTest.h1 <- sqrt(mean((predictions.h1 - serie.ts.test)^2))
+aic.h1 <- AIC(arima.model.h1)
+cat("RMSE train:", errorTrain.h1, "\nRMSE test:", errorTest.h1, "\nAIC:", aic.h1)
+```
+
+### Modelo con la serie temporal generada por la hipótesis 2
+
+Como se puede ver en el gráfico PACF, hay 3 valores que están fuera del rango, por que el orden de p es 3. Respecto al orden de q, solo hay tres valores que sobrepasan ese rango, por lo que será 3.
+
+```{r}
+acf(serie.ts.train.without.trend.h2)
+pacf(serie.ts.train.without.trend.h2)
+```
+
+```{r}
+arima.model.h2 <- arima(
+    serie.ts.train.without.trend.h2,
+    order = c(3, 0, 3)
+)
+
+valoresAjustados.h2 <- serie.ts.train.without.trend.h2 + arima.model.h2$residuals + trend.estimated.train.h2
+predictions.h2 <- predict(arima.model.h2, n.ahead = 2)$pred + trend.estimated.test.h2
+
+# Representación de los valores ajustados y la predicción
+plot.ts(
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
+)
+lines(valoresAjustados.h2, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h2, col="blue")
+```
+
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
+
+```{r}
+Box.test(arima.model.h2$residuals)
+jarque.bera.test(arima.model.h2$residuals)
+shapiro.test(arima.model.h2$residuals)
+hist(arima.model.h2$residuals, col="blue", prob=T)
+lines(density(arima.model.h2$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h2 <- sqrt(mean((valoresAjustados.h2 - serie.ts.train)^2))
+errorTest.h2 <- sqrt(mean((predictions.h2 - serie.ts.test)^2))
+aic.h2 <- AIC(arima.model.h2)
+cat("RMSE train:", errorTrain.h2, "\nRMSE test:", errorTest.h2, "\nAIC:", aic.h2)
+```
+
+### Modelo con la serie temporal generada por la hipótesis 3
+
+Como se puede ver en el gráfico PACF, hay 6 valores que están fuera del rango, por que el orden de p es 6. Respecto al orden de q, solo hay tres valores que sobrepasan ese rango, por lo que será 3.
+
+```{r}
+acf(serie.ts.train.without.trend.h3)
+pacf(serie.ts.train.without.trend.h3)
+```
+
+```{r}
+arima.model.h3 <- arima(
+    serie.ts.train.without.trend.h3,
     order = c(6, 0, 3)
 )
 
-valoresAjustados <- serie.ts.train.without.trend + arima.model$residuals
+valoresAjustados.h3 <- serie.ts.train.without.trend.h3 + arima.model.h3$residuals + trend.estimated.train.h3
+predictions.h3 <- predict(arima.model.h3, n.ahead = 2)$pred + trend.estimated.test.h3
 
-predictions <- predict(arima.model, n.ahead = 2)$pred
-
-errorTrain <- sum((arima.model$residuals)^2)
-errorTest <- sum((predictions - serie.ts.test.without.trend)^2)
-```
-
-
-```{r}
+# Representación de los valores ajustados y la predicción
 plot.ts(
-    serie.ts.train.without.trend,
-    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)]),
-    ylim=c(-2, 3)
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
 )
-lines(valoresAjustados, col="blue")
-lines(serie.ts.test.time, serie.ts.test.without.trend, col="red")
-lines(serie.ts.test.time, predictions, col="blue")
+lines(valoresAjustados.h3, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h3, col="blue")
 ```
 
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
 
 ```{r}
-Box.test(arima.model$residuals)
-jarque.bera.test(arima.model$residuals)
-shapiro.test(arima.model$residuals)
-hist(arima.model$residuals, col="blue", prob=T)
-lines(density(arima.model$residuals))
+Box.test(arima.model.h3$residuals)
+jarque.bera.test(arima.model.h3$residuals)
+shapiro.test(arima.model.h3$residuals)
+hist(arima.model.h3$residuals, col="blue", prob=T)
+lines(density(arima.model.h3$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h3 <- sqrt(mean((valoresAjustados.h3 - serie.ts.train)^2))
+errorTest.h3 <- sqrt(mean((predictions.h3 - serie.ts.test)^2))
+aic.h3 <- AIC(arima.model.h3)
+cat("RMSE train:", errorTrain.h3, "\nRMSE test:", errorTest.h3, "\nAIC:", aic.h3)
 ```
 
-Modelando tendencia con medias moviles (MA-3) (valores NA se rellenan con el más proximo) y un 6, 0, 3 en arima AIC -> 16.05643
-Error train -> 4.635024
-Error test -> 4.737994
+### Modelo con la serie temporal generada por la hipótesis 4
 
-Modelando tendencia con medias moviles (MA-5) (regresion lineal para los extremos y valor más proximo para test) y un 4, 0, 4 en arima AIC -> 92.87415
-Error train -> 10.71614
-Error test -> 0.4067225
+Como se puede ver en el gráfico PACF, hay 4 valores que están fuera del rango, por que el orden de p es 4. Respecto al orden de q, solo hay tres valores que sobrepasan ese rango, por lo que será 3.
 
-Modelando tendencia con medias moviles (MA-5) (los valores NA se rellenan con el más proximo. Test se queda con los valores del último) y un 3,0,3 en arima AIC -> 100.1031
-Error train -> 12.617510
-Error test -> 14.983722
+```{r}
+acf(serie.ts.train.without.trend.h4)
+pacf(serie.ts.train.without.trend.h4)
+```
 
-Modelando tendencia con medias moviles (MA-3) (valores NA se rellenan con el más proximo en el principio, regresion lineal para el ultimo valor y test) y un 6, 0, 3 en arima AIC -> 14.86745
-Error train -> 4.5593
-Error test -> 0.3562
+```{r}
+arima.model.h4 <- arima(
+    serie.ts.train.without.trend.h4,
+    order = c(4, 0, 3)
+)
+
+valoresAjustados.h4 <- serie.ts.train.without.trend.h4 + arima.model.h4$residuals + trend.estimated.train.h4
+predictions.h4 <- predict(arima.model.h4, n.ahead = 2)$pred + trend.estimated.test.h4
+
+# Representación de los valores ajustados y la predicción
+plot.ts(
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
+)
+lines(valoresAjustados.h4, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h4, col="blue")
+```
+
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
+
+```{r}
+Box.test(arima.model.h4$residuals)
+jarque.bera.test(arima.model.h4$residuals)
+shapiro.test(arima.model.h4$residuals)
+hist(arima.model.h4$residuals, col="blue", prob=T)
+lines(density(arima.model.h4$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h4 <- sqrt(mean((valoresAjustados.h4 - serie.ts.train)^2))
+errorTest.h4 <- sqrt(mean((predictions.h4 - serie.ts.test)^2))
+aic.h4 <- AIC(arima.model.h4)
+cat("RMSE train:", errorTrain.h4, "\nRMSE test:", errorTest.h4, "\nAIC:", aic.h4)
+```
+
+### Modelo con la serie temporal generada por la hipótesis 5
+
+Como se puede ver en el gráfico PACF, hay 5 valores que están fuera del rango, por que el orden de p es 5. Respecto al orden de q, solo hay dos valores que sobrepasan ese rango, por lo que será 2.
+
+```{r}
+acf(serie.ts.train.without.trend.h5)
+pacf(serie.ts.train.without.trend.h5)
+```
+
+```{r}
+arima.model.h5 <- arima(
+    serie.ts.train.without.trend.h5,
+    order = c(5, 0, 2)
+)
+
+valoresAjustados.h5 <- serie.ts.train.without.trend.h5 + arima.model.h5$residuals + trend.estimated.train.h5
+predictions.h5 <- predict(arima.model.h5, n.ahead = 2)$pred + trend.estimated.test.h5
+
+# Representación de los valores ajustados y la predicción
+plot.ts(
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
+)
+lines(valoresAjustados.h5, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h5, col="blue")
+```
+
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
+
+```{r}
+Box.test(arima.model.h5$residuals)
+jarque.bera.test(arima.model.h5$residuals)
+shapiro.test(arima.model.h5$residuals)
+hist(arima.model.h5$residuals, col="blue", prob=T)
+lines(density(arima.model.h5$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h5 <- sqrt(mean((valoresAjustados.h5 - serie.ts.train)^2))
+errorTest.h5 <- sqrt(mean((predictions.h5 - serie.ts.test)^2))
+aic.h5 <- AIC(arima.model.h5)
+cat("RMSE train:", errorTrain.h5, "\nRMSE test:", errorTest.h5, "\nAIC:", aic.h5)
+```
+
+### Modelo con la serie temporal generada por la hipótesis 6
+
+Como se puede ver en el gráfico PACF, hay 4 valores que están fuera del rango, por que el orden de p es 4. Respecto al orden de q, solo hay tres valores que sobrepasan ese rango, por lo que será 3.
+
+```{r}
+acf(serie.ts.train.without.trend.h6)
+pacf(serie.ts.train.without.trend.h6)
+```
+
+```{r}
+arima.model.h6 <- arima(
+    serie.ts.train.without.trend.h6,
+    order = c(4, 0, 3)
+)
+
+valoresAjustados.h6 <- serie.ts.train.without.trend.h6 + arima.model.h6$residuals + trend.estimated.train.h6
+predictions.h6 <- predict(arima.model.h6, n.ahead = 2)$pred + trend.estimated.test.h6
+
+# Representación de los valores ajustados y la predicción
+plot.ts(
+    serie.ts.train,
+    xlim=c(1, serie.ts.test.time[length(serie.ts.test.time)])
+)
+lines(valoresAjustados.h6, col="blue")
+lines(serie.ts.test.time, serie.ts.test, col="red")
+lines(serie.ts.test.time, predictions.h6, col="blue")
+```
+
+A continuación se comprueba la bondad del modelo construido. Para ello se va a ejecutar el test estadístico de Box-Pierce (para comprobar si los residuos son aleatorios) y los test estadísticos de Shapiro-wilk y jarque-bera (para comprobar si los residuos siguen una distribución normal). Si en alguno de estos test estadísticos se rechaza la hipótesis nula, estamos ante un mal modelo.
+
+```{r}
+Box.test(arima.model.h6$residuals)
+jarque.bera.test(arima.model.h6$residuals)
+shapiro.test(arima.model.h6$residuals)
+hist(arima.model.h6$residuals, col="blue", prob=T)
+lines(density(arima.model.h6$residuals))
+```
+Finalmente, para tener una serie de métricas que permitan comparar varios modelos, se va a calcular el error cuadrático medio para train y test además del criterio de información de Akaike para el modelo. Las tres métricas son a minimizar.
+
+```{r}
+errorTrain.h6 <- sqrt(mean((valoresAjustados.h5 - serie.ts.train)^2))
+errorTest.h6 <- sqrt(mean((predictions.h6 - serie.ts.test)^2))
+aic.h6 <- AIC(arima.model.h6)
+cat("RMSE train:", errorTrain.h6, "\nRMSE test:", errorTest.h6, "\nAIC:", aic.h6)
+```
+### Resumen modelos
+
+```{r echo=FALSE, results='asis'}
+table <- data.frame(
+    Modelo=c("Modelo 1", "Modelo 2", "Modelo 3", "Modelo 4", "Modelo 5", "Modelo 6"),
+    Orden=c("6, 0, 2", "3, 0, 3", "6, 0, 3", "4, 0, 3", "5, 0, 2", "4, 0, 3"),
+    "¿Box-pierce?"=c("Sí", "Sí", "Sí", "Sí", "Sí", "Sí"),
+    "¿Jarque-bera?"=c("Sí", "Sí", "Sí", "Sí", "Sí", "Sí"),
+    "¿Shafiro-wilk?"=c("Sí", "Sí", "Sí", "Sí", "Sí", "Sí"),
+    "RMSE Train"=c(
+        errorTrain.h1, errorTrain.h2, errorTrain.h3, errorTrain.h4, errorTrain.h5, errorTrain.h6
+    ),
+    "RMSE Test"=c(
+        errorTest.h1, errorTest.h2, errorTest.h3, errorTest.h4, errorTest.h5, errorTest.h6
+    ),
+    "AIC"=c(aic.h1, aic.h2, aic.h3, aic.h4, aic.h5, aic.h6),
+    check.names = F
+)
+
+kable(table)
+```
+
+Como se puede ver en esta tabla, se ha hecho un resumen de los distintos modelos que se han realizado especificando el orden que se ha establecido y el resultado de los test estadísticos y de las métricas que se han obtenido.
+
+Revisando los RMSE que se han obtenido en train y test, el mejor modelo de todos es el modelo 3 (que se ha entrenado teniendo en cuenta que la tendencia se ha modelado según la hipótesis 3). Aunque es el segundo modelo más simple según el criterio de información de Akaike, es el mejor de todos en predecir los siguientes dos valores además de ajustarse correctamente a los datos de entrenamiento.
+
+Por lo tanto, se va a utilizar la configuración del modelo 3 para predecir los dos siguientes valores de la serie, objetivo principal de esta práctica.
 
 ## Predicción de los dos siguientes valores
 
+### Tendencia
+
 ```{r}
-k <- 1
-filtro <- rep(
-    1/((k*2) + 1),
-    (k*2) + 1
+trend.estimated <- ma.series(
+    serie.ts, k=1
 )
 
-trend.estimated <- filter(serie.ts, filter = filtro, sides = 2, method = "convolution")
-
-trend.estimated[1] <- trend.estimated[2]
 serie.ts.time <- 1:length(serie.ts)
 
+first_n_lm <- lm(serie.ts[1:(1+2)] ~ serie.ts.time[1:(1+2)])
+trend.estimated[1] <- first_n_lm$fitted.values[1]
+
 last_n_lm <- lm(
-    serie.ts[(length(serie.ts) - 2):length(serie.ts)] ~ serie.ts.time[(length(serie.ts) - 2):length(serie.ts)]
+    serie.ts[(length(serie.ts) - 1 - 1):length(serie.ts)] ~ serie.ts.time[(length(serie.ts) - 1 - 1):length(serie.ts)]
 )
 trend.estimated[length(serie.ts)] <- last_n_lm$fitted.values[3]
 
-serie.ts.without.trend <- serie.ts - trend.estimated
+trend.estimated.prediction <- last_n_lm$coefficients[1] + c(97, 98)*last_n_lm$coefficients[2]
 
+serie.ts.without.trend <- serie.ts - trend.estimated
+```
+
+### ARIMA
+
+```{r}
 arima.model.final <- arima(
     serie.ts.without.trend,
     order = c(6, 0, 3)
 )
 
 final.predictions <- predict(arima.model.final, n.ahead = 2)$pred
-
-plot.ts(
-    serie.ts.without.trend[1:96],
-    xlim=c(1, serie.ts.time[length(serie.ts.time)]),
-    ylim=c(-2, 2)
-)
-valoresAjustados <- serie.ts.without.trend + arima.model.final$residuals
-lines(valoresAjustados[1:96], col="blue")
-lines(97:98, final.predictions, col="blue")
 ```
 
-Las predicciones de los dos valores siguientes son: 580.1536 580.3910
+### Obtención de los valores y gráfica final
 
-El AIC del modelo final es 16.47838
+Las predicciones de los dos valores siguientes son: 580.1493 y 580.4179
 
 ```{r}
-trend.estimated.prediction <- last_n_lm$coefficients[1] + c(97, 98)*last_n_lm$coefficients[2]
-
 predictions.with.trend <- final.predictions + trend.estimated.prediction
 
 plot.ts(
@@ -532,5 +794,3 @@ plot.ts(
 )
 lines(97:98, predictions.with.trend, col="blue")
 ```
-
-
